fix(*) styling issue where taskBrowser header scrollbar appears when dragging a tab item

--- a/src/components/taskBrowser/header/header.module.scss
+++ b/src/components/taskBrowser/header/header.module.scss
@@ -1,5 +1,6 @@
 .root {
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
   display: flex;
 
   background-color: #15171a;
